--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@material-ui/icons": "^1.1.0",
     "dateformat": "^3.0.3",
     "react": "^16.4.0",
+    "react-cookies": "^0.1.0",
     "react-dom": "^16.4.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
