--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react": "^16.4.0",
     "react-cookies": "^0.1.0",
     "react-dom": "^16.4.0",
+    "react-infinite-scroller": "^1.1.4",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
     "request": "^2.87.0"
